# tuulbelt

./: .env.example  .envrc  .envrc.example  .gitignore  .gitmodules  .mcp.json  API_AUDIT_COMPARISON.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_ALIGNMENT_AUDIT.md  PRINCIPLES.md  README.md  ROADMAP.md  SECOND_PASS_AUDIT.md  SESSION_SUMMARY.md  STATUS.md  TEMPLATE_AUDIT.md  THIRD_PASS_AUDIT.md  VERIFICATION_FINDINGS.md  package-lock.json  package.json
.claude/: HANDOFF.md  MIGRATION_REVIEW.md  NEXT_TASKS.md  cli-workspace-tracking.json  settings.json  settings.local.json.example  web-session-tracking.json
.github/: CODEOWNERS
cli-progress-reporting/: CHANGELOG.md  DOGFOODING.md  DOGFOODING_STRATEGY.md  README.md  STATUS.md  demo-url.txt  demo.cast  package-lock.json  package.json
config-file-merger/: CHANGELOG.md  DOGFOODING_STRATEGY.md  README.md  SPEC.md  STATUS.md  demo-url.txt  demo.cast  package-lock.json  package.json  tsconfig.json
cross-platform-path-normalizer/: CHANGELOG.md  DOGFOODING_STRATEGY.md  README.md  SPEC.md  STATUS.md  demo-url.txt  demo.cast  package-lock.json  package.json  tsconfig.json
docs/: BENCHMARKING_STANDARDS.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_SETUP.md  CI_GUIDE.md  CLEANUP_PLAN.md  CLI_AND_LIBRARY_DESIGN.md  CLI_WORKFLOW.md  COMMON_PITFALLS.md  DEMO_RECORDING_PLAN.md  DOCUMENTATION_MAINTENANCE.md  FEATURE_BRANCH_WORKFLOW.md  GH_CLI_AUTH_GUIDE.md  KNOWN_ISSUES.md  META_REPO_EXPANSION_PROPOSAL.md  MIGRATION_TO_META_REPO.md  QUALITY_CHECKLIST.md  TOOL_DASHBOARD.md  TOOL_MATURITY_ANALYSIS.md  TUULBELT_OPTIMIZATION_AUDIT.md  UNIFIED_WORKFLOW_PLAN.md  WEB_WORKFLOW.md  WEB_WORKFLOW_INTEGRATION.md  WORKFLOW_TEST_RESULTS.md  WORKFLOW_TROUBLESHOOTING.md  claude-code-implementation.md  index.md  tool-template.md
file-based-semaphore/: CHANGELOG.md  Cargo.toml  DOGFOODING_STRATEGY.md  README.md  SPEC.md  STATUS.md  demo-url.txt  demo.cast
file-based-semaphore-ts/: .gitignore  DOGFOODING_STRATEGY.md  README.md  SPEC.md  (+4 more)
file-based-semaphore/.github/workflows/: test.yml
file-based-semaphore/examples/: basic.rs  concurrent.rs  stale_recovery.rs
file-based-semaphore/scripts/: demo.sh  dogfood-diff.sh  dogfood-flaky.sh  dogfood.sh
file-based-semaphore/src/: lib.rs  main.rs
file-based-semaphore/tests/: cli.rs  integration.rs
output-diffing-utility/: .gitignore  CHANGELOG.md  CLI_DESIGN.md  Cargo.toml  DIFF_ALGORITHMS_RESEARCH.md  DOGFOODING_STRATEGY.md  README.md  SPEC.md  STATUS.md  demo-url.txt  demo.cast
output-diffing-utility/.github/workflows/: test.yml
output-diffing-utility/docs/: .gitkeep
output-diffing-utility/examples/: advanced.rs  basic.rs
output-diffing-utility/scripts/: dogfood-flaky.sh  dogfood-paths.sh  dogfood-pipeline.sh  dogfood-progress.sh  dogfood-semaphore.sh
output-diffing-utility/src/: json.rs  lib.rs  main.rs
output-diffing-utility/tests/: cli.rs
snapshot-comparison/: CHANGELOG.md  CLI_DESIGN.md  Cargo.toml  DOGFOODING_STRATEGY.md  README.md  RESEARCH.md  SPEC.md  STATUS.md  demo-url.txt  demo.cast
snapshot-comparison/.github/workflows/: test.yml
snapshot-comparison/examples/: advanced.rs  basic.rs
snapshot-comparison/scripts/: dogfood-diff.sh  dogfood-flaky.sh  dogfood-sema.sh  record-snapshot-comparison-demo.sh
snapshot-comparison/src/: lib.rs  main.rs
snapshot-comparison/tests/: integration.rs
templates/protocol-template/: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md
templates/protocol-template/.github/workflows/: test.yml
templates/protocol-template/examples/: basic.rs
templates/protocol-template/src/: lib.rs  main.rs
templates/protocol-template/tests/: vectors.rs
templates/research-template/: .gitignore  CLAUDE.md  Cargo.toml  FINDINGS.md  HYPOTHESIS.md  LICENSE  README.md  STATUS.md  package.json
templates/research-template/.github/workflows/: test.yml
templates/research-template/experiments/: main.rs  main.ts
templates/research-template/src/: index.ts  lib.rs
templates/rust-tool-template/: CLAUDE.md  CLI_DESIGN.md  CONTRIBUTING.md  Cargo.toml  DOGFOODING_STRATEGY.md  README.md  RESEARCH.md  package.json
templates/rust-tool-template/.github/workflows/: benchmark.yml  create-demo.yml  test.yml
templates/rust-tool-template/benches/: README.md  benchmark.rs
templates/rust-tool-template/examples/: advanced.rs  basic.rs
templates/rust-tool-template/scripts/: dogfood-diff.sh  dogfood-flaky.sh  dogfood.sh  record-demo.sh
templates/rust-tool-template/src/: lib.rs  main.rs
templates/rust-tool-template/tests/: integration.rs
(+402 files in other folders)
