[package]
name = "file-based-semaphore"
version = "0.1.0"
edition = "2021"
description = "Cross-platform file-based semaphore for process coordination"
license = "MIT"
repository = "https://github.com/tuulbelt/file-based-semaphore"
readme = "README.md"
keywords = ["tuulbelt", "semaphore", "lock", "process", "coordination"]
categories = ["concurrency", "command-line-utilities"]

[lib]
name = "file_based_semaphore"
path = "src/lib.rs"

[[bin]]
name = "sema"
path = "src/main.rs"

[[bin]]
name = "file-semaphore"
path = "src/main.rs"

[dependencies]
# Zero runtime dependencies - uses only std library

[dev-dependencies]
# None - uses built-in test framework

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
