[package]
name = "output-diffing-utility"
version = "0.1.0"
edition = "2021"
description = "Semantic diff tool for JSON, text, and binary files with zero dependencies"
license = "MIT"
repository = "https://github.com/tuulbelt/output-diffing-utility"
readme = "README.md"
keywords = ["tuulbelt", "cli", "diff", "comparison"]
categories = ["command-line-utilities"]

[lib]
name = "output_diffing_utility"
path = "src/lib.rs"

[[bin]]
name = "odiff"
path = "src/main.rs"

[[bin]]
name = "output-diff"
path = "src/main.rs"

[dependencies]
# Zero runtime dependencies - uses only std library

[dev-dependencies]
# None - uses built-in test framework

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
